Fix spacing on game ending div.

--- a/app/stylesheets/skifree.css
+++ b/app/stylesheets/skifree.css
@@ -117,13 +117,14 @@ body:before {
 }
 
 #game-over-header {
-  margin-top: 50px;
+  margin-top: 60px;
   font-size: 50px;
   color: white;
   font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 
 #score-header {
+  margin-top: 20px;
   color: white;
   font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 40px;
